# climate-information

./: 404.html  LICENSE.txt  README.md  dodo.py  index.html  index.xml  pyproject.toml  sitemap.xml
.github/workflows/: build-and-test.yaml  build-web.yaml
about/: index.html  index.xml
assets/examples/: USA_IL_Chicago.cbor
assets/schema/: ClimateInformation.schema.json
categories/: index.html  index.xml
docs/: ClimateInformation.md.j2
docs/web/: about.md  config.yaml  landing.md
examples/: index.html  index.xml
examples/ibpsa-bde/: IBPSA-BDE-Climate.schema.yaml
js/: main.min.a5753c95c0a20c0f8208ce558787193a28b2e710e46f19728197693dbc2ec391.js
schema/: ClimateInformation.schema.yaml  index.html  index.xml
scss/: main.min.5efc5382fff940a402f6cf8e691bfaeee05928c17eceef8ed098516a3f353981.css
specifications/: index.html  index.xml
specifications/climateinformation/: index.html
src/: validate_example.py
tags/: index.html  index.xml
