[tool.poetry]
name = "climate-information"
version = "0.1.0"
description = ""
authors = ["Big Ladder Software"]

[tool.poetry.dependencies]
python = "^3.8"
lattice = {git = "https://github.com/bigladder/lattice.git", branch="generate-markdown"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
