[tool.poetry]
name = "climate-information"
version = "0.1.0"
description = "Climate Information Data Model"
authors = ["IBPSA-USA"]

[tool.poetry.dependencies]
python = "^3.8"
lattice = "0.1.4"

[tool.poetry.dev-dependencies]
doit = "0.36.0"
tomli = "2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
